# pixel-game-github-template

./: CNAME  Cargo.toml  README.md  index.html  replace_me.wasm
.github/workflows/: rust.yml
src/: main.rs  player.rs  render.rs  sprite.rs
www/: index.html
