[package]
name = "replace_me"
version = "0.1.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/tversteeg/replace_me"
documentation = "https://docs.rs/replace_me"
description = ""
keywords = []
categories = []

[dependencies]
anyhow = "1.0.28"
const-tweaker = "0.3.1"
cpal = "0.11.0"
minifb = "0.16.0"
specs = "0.16.1"
specs-blit = "0.3.3"
usfx = "0.1.2"
vek = "0.10.1"

[dev-dependencies]
doc-comment = "0.3.3"
